bugfix header overflow

--- a/src/css/dash/_header.scss
+++ b/src/css/dash/_header.scss
@@ -18,7 +18,7 @@
 .siftal .dashHead h1 a:hover{color:#444;background-color:rgba(0,0,0,0.1);}
 .siftal .dashHead h1 a:focus{color:#444;background-color:rgba(0,0,0,0.15);}
 .siftal .dashHead h1 img{height:50px;width:50px;padding:5px;}
-.siftal .dashHead h1 span{padding:0 0.5em;font-weight:bold;}
+.siftal .dashHead h1 span{padding:0 0.5em;font-weight:bold;overflow:hidden;white-space: nowrap;text-overflow:ellipsis;max-width:300px;}
 /* header flex */
 .siftal .dashHead i{padding:0;cursor:pointer;transition-duration:0.3s;transition-property:color, background-color;display:block;height:100%;width:50px;color:#888;line-height:45px;}
 .siftal .dashHead i:before{font-size:1.5em;vertical-align:-webkit-baseline-middle!important;}
